Button and link comparison

--- a/index.html
+++ b/index.html
@@ -74,5 +74,9 @@
       Download de
       <a href="./pdf/h05.pdf" download="Hoofdstuk 5">pdf van hoofdstuk 5</a>.
     </p>
+
+    <!-- Button vs link -->
+    <button>Ik ben een knop</button>
+    <a id="fake-button" href="#">Ik ben een link</a>
   </body>
 </html>
