Added a simple javascript

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="prev" href="pagina0.html" />
     <link rel="next" href="pagina2.html" />
 
+    <!-- Script -->
+    <script src="loi.js"></script>
+
     <title>Links en meer</title>
   </head>
   <body>
@@ -78,5 +81,11 @@
     <!-- Button vs link -->
     <button>Ik ben een knop</button>
     <a id="fake-button" href="#">Ik ben een link</a>
+    <br />
+
+    <!-- Javascript -->
+    <p id="demo" onclick="myFunction()">
+      Klik om de javascript functie uit te voeren
+    </p>
   </body>
 </html>
